test/preprocessor/pass/empty_va_args.osl
#define MACRO(x, ...) x __VA_ARGS__
shader test() {
    int i = MACRO(1);
}
