test/preprocessor/fail/invalid_stringify.osl
#define STR(x) #1
#define STR2(...) #__VA_ARGS__
